Changed tree to binary

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,22 @@ project(datastructures-algorithms C CXX)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_VERBOSE_MAKEFILE ON)
 
+set(
+        HEADERS
+        inc/list.hpp
+        inc/stack.hpp
+        inc/queue.hpp
+        inc/graph.hpp
+        inc/tree.hpp
+)
+
 set(CUTIE_DIR Cutie)
 include(${CUTIE_DIR}/Cutie.cmake)
-add_cutie_test_target(TEST test/test_list.cpp SOURCES inc/list.hpp)
-add_cutie_test_target(TEST test/test_stack.cpp SOURCES inc/stack.hpp)
-add_cutie_test_target(TEST test/test_queue.cpp SOURCES inc/queue.hpp)
-add_cutie_test_target(TEST test/test_graph.cpp SOURCES inc/graph.hpp)
-add_cutie_test_target(TEST test/test_tree.cpp SOURCES inc/tree.hpp)
+# I set all headers as sources because I'm too lazy to specify each header for each test
+add_cutie_test_target(TEST test/test_list.cpp SOURCES ${HEADERS})
+add_cutie_test_target(TEST test/test_stack.cpp SOURCES ${HEADERS})
+add_cutie_test_target(TEST test/test_queue.cpp SOURCES ${HEADERS})
+add_cutie_test_target(TEST test/test_graph.cpp SOURCES ${HEADERS})
+add_cutie_test_target(TEST test/test_tree.cpp SOURCES ${HEADERS})
 add_cutie_all_tests_target()
 add_cutie_coverage_targets()
