Started binary search, need to test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(
         inc/graph.hpp
         inc/tree.hpp
         inc/graph_scanner.hpp
+        inc/binary_search.hpp
 )
 
 set(CUTIE_DIR Cutie)
@@ -22,5 +23,6 @@ add_cutie_test_target(TEST test/test_stack.cpp SOURCES ${HEADERS})
 add_cutie_test_target(TEST test/test_queue.cpp SOURCES ${HEADERS})
 add_cutie_test_target(TEST test/test_graph.cpp SOURCES ${HEADERS})
 add_cutie_test_target(TEST test/test_tree.cpp SOURCES ${HEADERS})
+add_cutie_test_target(TEST test/test_binary_search.cpp SOURCES ${HEADERS})
 add_cutie_all_tests_target()
 add_cutie_coverage_targets()
