Added push back

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ set(
         inc/tree.hpp
         inc/graph_scanner.hpp
         inc/binary_search.hpp
+        inc/array_list.hpp
 )
 
 set(CUTIE_DIR Cutie)
@@ -24,5 +25,6 @@ add_cutie_test_target(TEST test/test_queue.cpp SOURCES ${HEADERS})
 add_cutie_test_target(TEST test/test_graph.cpp SOURCES ${HEADERS})
 add_cutie_test_target(TEST test/test_tree.cpp SOURCES ${HEADERS})
 add_cutie_test_target(TEST test/test_binary_search.cpp SOURCES ${HEADERS})
+add_cutie_test_target(TEST test/test_array_list.cpp SORUCES ${HEADERS})
 add_cutie_all_tests_target()
 add_cutie_coverage_targets()
