Did hash table, need to test with more bucket sizes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,5 +30,6 @@ add_cutie_test_target(TEST test/test_array_list.cpp SOURCES ${HEADERS})
 add_cutie_test_target(TEST test/test_merge_sort.cpp SOURCES src/merge_sort.c)
 add_cutie_test_target(TEST test/test_string_builder.cpp SOURCES src/string_builder.cpp)
 add_cutie_test_target(TEST test/test_min_heap.cpp SOURCES src/min_heap.cpp)
+add_cutie_test_target(TEST test/test_hash_table.cpp SOURCES src/hash_table.c)
 add_cutie_all_tests_target()
 add_cutie_coverage_targets()
